@@ -36,6 +36,8 @@ Bugfixes:
 - fixed Ruby application issue by updating to Spring 2.0.5 and JRuby 0.9.8
   (Jira APPSERVER-93)
 - fixed async calling of remoting methods (Jira APPSERVER-131)
+- accessing root of RTMPT server no longer results in 404 but redirects to
+  HTTP port (Jira APPSERVER-130)
 
 
 Red5 0.6    (2007-04-23)
